--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik+Maze&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-* > *{
-  font-family: 'Poppins', sans-serif;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: 'Rubik Maze', cursive;
 }
 
 a {
@@ -15,4 +19,15 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: white;
+  }
+
+  body {
+    color: black;
+    background: white;
+  }
 }
